k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: __DEPLOYMENT__
  namespace: __NAMESPACE__
spec:
  replicas: __REPLICAS__
  selector:
    matchLabels:
      app: __DEPLOYMENT__
  template:
    metadata:
      labels:
        app: __DEPLOYMENT__
    spec:
      serviceAccountName: __SERVICE_ACCOUNT__
      containers:
        - name: __CONTAINER__
          image: __IMAGE__
          imagePullPolicy: Always
          ports:
            - containerPort: "__PORT__"
            - containerPort: "9000"
