k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: __DEPLOYMENT__
  namespace: __NAMESPACE__
  labels:
    app: __DEPLOYMENT__
spec:
  selector:
    app: __DEPLOYMENT__
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: __PORT__
    - name: grpc
      protocol: TCP
      port: 9000
      targetPort: 9000
  type: ClusterIP
