k8s/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: __DEPLOYMENT__-strip
  namespace: __NAMESPACE__
spec:
  stripPrefix:
    prefixes:
      - /__DEPLOYMENT__
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: __DEPLOYMENT__
  namespace: __NAMESPACE__
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`__INGRESS_HOST__`) || PathPrefix(`/__DEPLOYMENT__`)
      kind: Rule
      middlewares:
        - name: __DEPLOYMENT__-strip
      services:
        - name: __DEPLOYMENT__
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: __DEPLOYMENT__-grpc
  namespace: __NAMESPACE__
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`__GRPC_INGRESS_HOST__`)
      kind: Rule
      services:
        - name: __DEPLOYMENT__
          port: 9000
          scheme: h2c
